[gd_scene load_steps=5 format=3 uid="uid://djg02a5fh50gy"]

[ext_resource type="Texture2D" uid="uid://cb6hdsgvw36p" path="res://assets/space.png" id="1_f4h3f"]
[ext_resource type="Script" path="res://space_background.gd" id="1_qhsw2"]
[ext_resource type="Texture2D" uid="uid://dy1m5gk3e5vdf" path="res://assets/far_stars.png" id="2_26555"]
[ext_resource type="Texture2D" uid="uid://7ymjupfcgx0l" path="res://assets/close_stars.png" id="3_deavm"]

[node name="SpaceBackground" type="ParallaxBackground"]
script = ExtResource("1_qhsw2")

[node name="SpaceLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="Space" type="TextureRect" parent="SpaceLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("1_f4h3f")
stretch_mode = 1

[node name="FarStarsLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="FarStarts" type="TextureRect" parent="FarStarsLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("2_26555")
stretch_mode = 1

[node name="CloseStartsLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="TextureRect" type="TextureRect" parent="CloseStartsLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("3_deavm")
stretch_mode = 1
